# pact-talk

./: .gitignore  Makefile  README.rst  light16x9.style  light4x3.style  pact-slides.rst  pyproject.toml
examples/: notes.rst
examples/client1/: client1_contract_tests.py  client1_tests.py  sandwich-maker-butterer.json
examples/client2/: client2_contract_tests.py  client2_tests.py  sandwich-maker-butterer.json
examples/client3/: client3_contract_tests.py  client3_tests.py  sandwich-maker-butterer.json
examples/server1/: server1.py  server1_tests.py
examples/server2/: server2.py  server2_tests.py
